--- a/style.css
+++ b/style.css
@@ -35,11 +35,13 @@ h4 {
 nav {
 	width: 100%;
 	position: absolute;
+	top:0;
 	z-index: 1;
 }
 
 button {
 	background-color: transparent;
+	color: #fff;
 	border: 2px solid #FFFFFF;
 	border-radius: 3px;
 	padding: 8px;
@@ -48,7 +50,7 @@ button {
 }
 
 section {
-	background: #ddd;
+	background: #eee;
 }
 
 .logo {
@@ -64,14 +66,26 @@ section {
 }
 
 .menu-items {
-	position: absolute;
-	right: 10px;
-	top: 10px;
+	position: fixed;
+	width: 100%;
+	text-align: right;
+	background-color: rgba(255,255,255,0.3);
+	height: 65px;
+	z-index: -1;
 }
 
 .menu-items,
 .menu-items a {
 	color: #fff;
+	padding-top: 10px;
+}
+
+.menu-items a {
+	text-decoration: none;
+}
+
+.menu-items>ul {
+	margin-right: 15px;
 }
 
 .menu-items li {
@@ -82,13 +96,10 @@ section {
 	margin-right: 10px;
 }
 
-.menu-items li:hover {
+.menu-items li:hover,
+button:hover {
 	background: #FFFFFF;
 	color: #333;
-}
-
-.menu-items a {
-	text-decoration: none;
 }
 
 .landing {
@@ -100,36 +111,101 @@ section {
 }
 
 .landing-welcome {
-	position: absolute;
-	top: 200px;
-	left: 10px;
-	background: rgba(0,0,0,0.4);
-	color: #FFFFFF;
-	padding: 5px 40px;
-	border-radius: 5px;
+  position: absolute;
+  left: -244px;
+  top: 44%;
+  margin-left: 50%;
+  padding: 5px 40px;
 }
 
-.landing-welcome h1 {
+.landing-welcome h1,
+.landing-contact h1 {
 	margin-bottom: 5px;
 }
 
-.landing-welcome h4 {
+.landing-welcome h4,
+.landing-contact h4 {
 	margin-top: 5px;
 	letter-spacing: 0.45px;
 }
 
-.content {
+.landing-welcome h1,
+.landing-welcome h4,
+.landing-contact h1,
+.landing-contact h4 {
+	text-align: center;
+}
+
+.landing-welcome,
+.landing-contact {
+	background: rgba(0,0,0,0.4);
+	color: #FFFFFF;
+	border-radius: 5px;
+}
+
+.landing-contact {
+	display: none;
+	position: absolute;
+	left: -219px;
+	top: 44%;
+	margin-left: 50%;
+	padding: 5px 40px;
+}
+
+.content,
+.testimonials {
+	padding-top: 40px;
+	padding-bottom: 40px;
+}
+
+.content-text {
+	width: 75vw;
+	margin: auto;
+}
+
+.content-text,
+.testimonials-left,
+.testimonials-right {
+	background: rgba(180,180,180,0.1);
+	padding: 25px;
+	border-radius: 5px;
+	border: 1px solid #333;
+}
+
+.three-column {
 	width: 900px;
 	margin: auto;
-	padding-top: 20px;
-	padding-bottom: 20px;
+}
+
+.testimonials {
+	text-align: center;
+}
+
+.testimonials-left,
+.testimonials-right {
+	position: relative;
+	width: 360px;
+	display: inline-table;
+	text-align: left;
+	margin: auto;
+}
+
+.testimonials-left {
+	margin-right: 30px;
+}
+
+.testimonials-right {
+	margin-left: 30px;
+}
+
+.testimonials img {
+	  box-shadow: 7px 7px 10px #9e9e9e;
 }
 
 .intro {
 	background: #36B473;
 	color: #FFFFFF;
 	padding-bottom: 10px;
-	text-align: center;
 }
 
 .intro-content img {
@@ -172,7 +248,7 @@ section {
 }
 
 section.image-gap {
-	height: 300px;
+	height: 400px;
 	background-position: 50% 50%;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -183,20 +259,33 @@ section.image-gap {
 }
 
 section.image-gap h1 {
-	color: rgba(255,255,255,.8);
-	font-weight: bold;
+  color: #fff;
+  font-weight: 700;
+  /* line-height: 250px; */
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  /* padding-bottom: 0px; */
+  padding-top: 31%;
+}
+
+/*
+section.image-gap h1 {
+	color: #fff;
+	font-weight: 700;
 	line-height: 250px;
 	text-align: center;
 	text-transform: uppercase;
 	letter-spacing: 3px;
 }
+*/
 
 section.image-gap.image-1 {
 	background-image: url("images/apple-gear-looking-pretty.jpg");
 }
 
 section.image-gap.image-2 {
-	background-image: url("images/clock.jpg");
+	background-image: url("images/ipad-keyboard-1920px.jpg");
 }
 
 .container {
@@ -205,29 +294,51 @@ section.image-gap.image-2 {
 }
 
 footer {
-	/* position: absolute; */
+	position: relative;
 	float: left;
 	padding-bottom: 0;
-	background: #333;
+	background: #222;
 	color: #9f9f9f;
 	width: 100%;
 	text-align: center;
 }
 
 @media screen and (max-width: 957px) {
+	.content {
+		width: 100%;
+		margin: auto;
+	}
+	
 	.intro-content-row-one,
 	.intro-content-row-two,
 	.intro-content-row-three {
 		display: inline;
 	}
 	
-	.content {
-		width: 85%;
-	}
-	
 	.intro-content-row-two img,
 	.intro-content-row-three img {
 		padding-top: 10px;
+	}
+	
+	.testimonials-left,
+	.testimonials-right {
+		position: relative;
+		margin-bottom: 35px;
+	}
+	
+	.testimonials-left {
+	margin-right: 0px;
+	}
+
+	.testimonials-right {
+	margin-left: 0px;
+	}
+	
+	.three-column,
+	.testimonials-left,
+	.testimonials-right,
+	.content-text {
+		width: 85%;
 	}
 	
 	#none-mobile-hr {
