--- a/style.css
+++ b/style.css
@@ -4,13 +4,14 @@ body {
 }
 
 body {
-	font-family: 'Comfortaa', cursive;
+	font-family: 'Alegreya Sans', sans-serif;
+	font-size: 20px;
+	font-weight: 300;
 }
 
 p {
 	font-size: 1em;
-	font-weight: 200;
-	letter-spacing: 1.1px;
+	line-height: 1.5;
 }
 
 h1,
