Posts added to testimonials
Code for displaying latest two posts on front page with image in post

--- a/wp-content/themes/740-template/style.css
+++ b/wp-content/themes/740-template/style.css
@@ -198,6 +198,14 @@ section {
 	padding-bottom: 40px;
 }
 
+.testimonials h1 {
+	font-size: 2.5em;
+}
+
+.testimonials a {
+	text-decoration: none;
+}
+
 .content-text {
 	width: 75vw;
 	margin: auto;
