Validation error correction

--- a/wp-content/themes/740-template/style.css
+++ b/wp-content/themes/740-template/style.css
@@ -227,6 +227,10 @@ section {
 	text-align: center;
 }
 
+.testimonials h1 {
+	text-align: center;
+}
+
 .testimonials-left,
 .testimonials-right {
 	position: relative;
