--- a/wp-content/themes/740-template/style.css
+++ b/wp-content/themes/740-template/style.css
@@ -60,7 +60,8 @@ nav {
 }
 
 .button-white a,
-.button-gray a {
+.button-gray a,
+.button-green a {
 	background-color: transparent;
 	border-radius: 3px;
 	padding: 7px 10px 5px;
@@ -71,7 +72,8 @@ nav {
 }
 
 .button-white,
-.button-gray {
+.button-gray
+.button-green {
 	text-align: center;
 }
 
@@ -79,7 +81,6 @@ nav {
 	color: #fff;
 	border: 2px solid #FFFFFF;
 }
-
 
 .button-white a:hover {
 	background: #fff;
@@ -93,6 +94,16 @@ nav {
 
 .button-gray a:hover {
 	background: #333;
+	color: #fff;
+}
+
+.button-green a {
+	color: #F2A30C;
+	border: 2px solid #F2A30C;
+}
+
+.button-green a:hover {
+	background: #F2A30C;
 	color: #fff;
 }
 
@@ -125,7 +136,7 @@ section {
 
 .menu-items,
 .menu-items a {
-	color: #fff;
+	color: #F2A30C;
 	padding-top: 7px;
 }
 
@@ -348,6 +359,19 @@ section.image-gap.image-2 {
 	top: 50%;
 	margin-top: -90px;
 	width: 100%;
+}
+
+.single-post {
+	position: relative;
+	top: 0;
+	padding-top: 80px;
+	padding-bottom: 80px;
+}
+
+.single-post-content {
+	position: relative;
+	margin: 0 auto;
+	max-width: 38rem;
 }
 
 footer {
