Single posts partly done
Still left to do is next previous links and option to go to list of
posts

--- a/wp-content/themes/740-template/style.css
+++ b/wp-content/themes/740-template/style.css
@@ -232,18 +232,25 @@ section {
 	color: #00a651;
 }
 
-.content-text {
+.content-text,
+.single-post-background {
 	width: 75vw;
 	margin: auto;
 }
 
 .content-text,
+.single-post-background,
 .testimonials-left,
 .testimonials-right {
 	background: rgba(180,180,180,0.1);
-	padding: 35px 25px;
 	border-radius: 5px;
 	border: 1px solid #00a651;
+}
+
+.content-text,
+.testimonials-left,
+.testimonials-right {
+	padding: 35px 25px;
 }
 
 .three-column {
@@ -364,7 +371,7 @@ section.image-gap.image-2 {
 .single-post {
 	position: relative;
 	top: 0;
-	padding-top: 80px;
+	padding-top: 150px;
 	padding-bottom: 80px;
 }
 
@@ -372,6 +379,21 @@ section.image-gap.image-2 {
 	position: relative;
 	margin: 0 auto;
 	max-width: 38rem;
+	padding-top: 0px;
+	padding-right: 45px;
+	padding-bottom: 25px;
+	padding-left: 45px;
+}
+
+
+.single-post-content h2 {
+	text-align: center;
+}
+
+.single-post-content-images img {
+	position: relative;
+	margin-left: 50%;
+	right: 125px;
 }
 
 footer {
